# agentic-delivery

./: .gitignore  README.md
agentic/: README.md  hermes-actions.yaml  identity-policy.yaml  (+1 more)
cli/: .coverage  .gitignore  CHANGELOG.md  README.md  build_scaffold.py  pyproject.toml  scaffold_manifest.yaml
cli/agentic/: __init__.py  app.py  context.py  manifest.py  shell.py
cli/agentic/commands/: _shell_helpers.py  boss.py  doctor.py  evidence.py  fixtures.py  hermes.py  identity.py  impl.py  init.py  manifest_cmd.py  new.py  next.py  plan.py  raw.py  run.py  status.py  validate.py
cli/agentic/scaffold/: __init__.py
cli/agentic/scaffold/_scaffold/: __init__.py
cli/agentic/schemas/: __init__.py  cli_v1.schema.json
cli/agentic/state_engine/: __init__.py  engine.py  primitives.py  render.py  rules.yaml
cli/agentic/ui/: __init__.py  errors.py  render.py
cli/scaffold_templates/: .gitignore  README.md
cli/scaffold_templates/agentic/profiles/: default-delivery.yaml
cli/tests/: _recording.py  conftest.py  test_build_scaffold.py  test_commands_boss.py  test_commands_evidence.py  test_commands_fixtures.py  test_commands_hermes.py  test_commands_identity.py  test_commands_impl.py  test_commands_init.py  test_commands_manifest_cmd.py  test_commands_new.py  test_commands_plan.py  test_commands_raw.py  test_commands_validate.py  test_compat.py  test_context.py  test_doctor.py  test_errors.py  test_integration_new_validates.py  test_json_schema.py  test_json_schema_conformance.py  test_manifest.py  test_next_command.py  test_run_commands.py  test_run_context.py  test_run_id_validation.py  test_shell.py  test_smoke.py  test_status_command.py
cli/tests/fixtures/manifests/: impl_approved_inputs_dict.yaml  impl_implementation_tasks.yaml  impl_mid_dispatch.yaml  impl_real_v01.yaml  planning_fresh.yaml
cli/tests/fixtures/repos/minimal/agentic/: pipeline.yaml
cli/tests/smoke/: test_e2e.sh
cli/tests/smoke/fixtures/: goal.md
cli/tests/snapshots/: error_no_repo.json  error_no_run_context.json  next_impl_pending_task.json  next_planning_fresh_init.json  next_planning_mixed_drafts.json  status_impl_mid_dispatch.json  status_planning_fresh.json
cli/tests/state_engine/: test_engine.py  test_primitives.py  test_render_sandbox.py
cli/tests/state_engine/fixtures/: blocked_strategy_conflict.yaml  boss_no_research.yaml  boss_research_no_brief.yaml  impl_all_reviewed.yaml  impl_dispatched_task.yaml  impl_executed_task.yaml  impl_no_task_graph.yaml  impl_pending_task.yaml  planning_all_terminal_approved.yaml  planning_all_terminal_rejected.yaml  planning_changes_requested.yaml  planning_fresh_init.yaml  planning_mixed_drafts.yaml  planning_one_reviewed.yaml  terminal_unknown.yaml
(+302 files in other folders)
