[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-delivery"
version = "0.1.0"
description = "Agentic Delivery CLI — wrapper over the scripts/* pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Chen" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer >= 0.12",
  "rich  >= 13",
  "pyyaml >= 6",
]

[project.scripts]
agentic = "agentic.app:main"

[project.optional-dependencies]
dev = [
  "pytest >= 8",
  "pytest-snapshot",
  "ruff",
  "mypy",
]

[tool.agentic]
compatible_pipeline_versions = [">=0.6,<0.7"]

[tool.hatch.build.targets.wheel]
packages = ["agentic"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
