[build-system]
requires = ["hatchling", "pyyaml >= 6"]
build-backend = "hatchling.build"

[project]
name = "agentic-delivery"
dynamic = ["version"]
description = "Agentic Delivery CLI — wrapper over the scripts/* pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Chen" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer >= 0.12",
  "rich  >= 13",
  "pyyaml >= 6",
]

[project.scripts]
agentic = "agentic.app:main"

[project.optional-dependencies]
dev = [
  "pytest >= 8",
  "pytest-snapshot",
  "pytest-cov",
  "ruff",
  "mypy",
  "jsonschema >= 4",
]

[tool.hatch.version]
source = "regex"
path = "agentic/__init__.py"
pattern = "^__version__ = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["agentic"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_scaffold.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["agentic"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
